[package]
name = "auditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = "0.4"
clap = "2.33"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
lz4_flex = "0.9"
num_cpus = "1.13"
rand = "0.8"
rsa = "0.5"
rsa-fdh = { version = "0.5", package = "xcbc-rsa-fdh" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9"
simple_logger = "2.1"
systemstat = "0.1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }
